2015-02-11  Brent Fulgham  <bfulgham@apple.com>

        Merge r179993. <rdar://problem/19813975>

    2015-02-11  Brent Fulgham  <bfulgham@apple.com>

            [Win] [64-bit] Work around MSVC2013 Runtime Bug
            https://bugs.webkit.org/show_bug.cgi?id=141498
            <rdar://problem/19803642>

            Reviewed by Anders Carlsson.

            Disable FMA3 instruction use in the MSVC math library to
            work around a VS2013 runtime crash. We can remove this
            workaround when we switch to VS2015.

            * API/tests/testapi.c: Call _set_FMA3_enable(0) to disable
            FMA3 support.
            * JavaScriptCore.vcxproj/JavaScriptCore.vcxproj: Add new files.
            * JavaScriptCore.vcxproj/JavaScriptCore.vcxproj.filters: Ditto.
            * JavaScriptCore.vcxproj/JavaScriptCoreDLL.cpp: Added.
            * JavaScriptCore.vcxproj/jsc/DLLLauncherMain.cpp: Call _set_FMA3_enable(0)
            to disable FMA3 support.
            * jsc.cpp: Ditto.
            * testRegExp.cpp: Ditto.

2015-02-04  Mark Lam  <mark.lam@apple.com>

        Merge r179576, r179648.  rdar://problem/19709578

    2015-02-04  Mark Lam  <mark.lam@apple.com>

            r179576 introduce a deadlock potential during GC thread suspension.
            <https://webkit.org/b/141268>

            Reviewed by Michael Saboff.

            http://trac.webkit.org/r179576 introduced a potential for deadlocking.
            In the GC thread suspension loop, we currently delete
            MachineThreads::Thread that we detect to be invalid.  This is unsafe
            because we may have already suspended some threads, and one of those
            suspended threads may still be holding the C heap lock which we need
            for deleting the invalid thread.

            The fix is to put the invalid threads in a separate toBeDeleted list,
            and delete them only after GC has resumed all threads.

            * heap/MachineStackMarker.cpp: